Fixed alignment of some of the font

--- a/style.scss
+++ b/style.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: 'codefresh';
-  src:  url('#{$icomoon-font-path}/codefresh.eot?sgiz0f');
-  src:  url('#{$icomoon-font-path}/codefresh.eot?sgiz0f#iefix') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/codefresh.ttf?sgiz0f') format('truetype'),
-    url('#{$icomoon-font-path}/codefresh.woff?sgiz0f') format('woff'),
-    url('#{$icomoon-font-path}/codefresh.svg?sgiz0f#codefresh') format('svg');
+  src:  url('#{$icomoon-font-path}/codefresh.eot?u8rbne');
+  src:  url('#{$icomoon-font-path}/codefresh.eot?u8rbne#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/codefresh.ttf?u8rbne') format('truetype'),
+    url('#{$icomoon-font-path}/codefresh.woff?u8rbne') format('woff'),
+    url('#{$icomoon-font-path}/codefresh.svg?u8rbne#codefresh') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -26,9 +26,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-codefresh-send-email {
+.icon-codefresh-account-managment {
   &:before {
-    content: $icon-codefresh-send-email;
+    content: $icon-codefresh-account-managment;
+  }
+}
+.icon-codefresh-activity-log {
+  &:before {
+    content: $icon-codefresh-activity-log;
+  }
+}
+.icon-codefresh-add-layer {
+  &:before {
+    content: $icon-codefresh-add-layer;
   }
 }
 .icon-codefresh-arrow_2 {
@@ -61,101 +71,6 @@
     content: $icon-codefresh-chebron-r;
   }
 }
-.icon-codefresh-compositions-2 {
-  &:before {
-    content: $icon-codefresh-compositions-2;
-  }
-}
-.icon-codefresh-enviroments-2 {
-  &:before {
-    content: $icon-codefresh-enviroments-2;
-  }
-}
-.icon-codefresh-images-2 {
-  &:before {
-    content: $icon-codefresh-images-2;
-  }
-}
-.icon-codefresh-launch-2 {
-  &:before {
-    content: $icon-codefresh-launch-2;
-  }
-}
-.icon-codefresh-logs-2 {
-  &:before {
-    content: $icon-codefresh-logs-2;
-  }
-}
-.icon-codefresh-pending {
-  &:before {
-    content: $icon-codefresh-pending;
-  }
-}
-.icon-codefresh-pipeline-2 {
-  &:before {
-    content: $icon-codefresh-pipeline-2;
-  }
-}
-.icon-codefresh-plus-2 {
-  &:before {
-    content: $icon-codefresh-plus-2;
-  }
-}
-.icon-codefresh-promote-2 {
-  &:before {
-    content: $icon-codefresh-promote-2;
-  }
-}
-.icon-codefresh-rebuild {
-  &:before {
-    content: $icon-codefresh-rebuild;
-  }
-}
-.icon-codefresh-scan {
-  &:before {
-    content: $icon-codefresh-scan;
-  }
-}
-.icon-codefresh-search-2 {
-  &:before {
-    content: $icon-codefresh-search-2;
-  }
-}
-.icon-codefresh-services-2 {
-  &:before {
-    content: $icon-codefresh-services-2;
-  }
-}
-.icon-codefresh-success-2 {
-  &:before {
-    content: $icon-codefresh-success-2;
-  }
-}
-.icon-codefresh-fail-2 {
-  &:before {
-    content: $icon-codefresh-fail-2;
-  }
-}
-.icon-codefresh-tag {
-  &:before {
-    content: $icon-codefresh-tag;
-  }
-}
-.icon-codefresh-account-managment {
-  &:before {
-    content: $icon-codefresh-account-managment;
-  }
-}
-.icon-codefresh-activity-log {
-  &:before {
-    content: $icon-codefresh-activity-log;
-  }
-}
-.icon-codefresh-add-layer {
-  &:before {
-    content: $icon-codefresh-add-layer;
-  }
-}
 .icon-codefresh-code {
   &:before {
     content: $icon-codefresh-code;
@@ -164,6 +79,11 @@
 .icon-codefresh-composition {
   &:before {
     content: $icon-codefresh-composition;
+  }
+}
+.icon-codefresh-compositions-2 {
+  &:before {
+    content: $icon-codefresh-compositions-2;
   }
 }
 .icon-codefresh-computer {
@@ -201,6 +121,11 @@
     content: $icon-codefresh-edit-pencil;
   }
 }
+.icon-codefresh-enviroments-2 {
+  &:before {
+    content: $icon-codefresh-enviroments-2;
+  }
+}
 .icon-codefresh-environments {
   &:before {
     content: $icon-codefresh-environments;
@@ -209,6 +134,11 @@
 .icon-codefresh-example {
   &:before {
     content: $icon-codefresh-example;
+  }
+}
+.icon-codefresh-fail-2 {
+  &:before {
+    content: $icon-codefresh-fail-2;
   }
 }
 .icon-codefresh-failed {
@@ -224,6 +154,16 @@
 .icon-codefresh-images {
   &:before {
     content: $icon-codefresh-images;
+  }
+}
+.icon-codefresh-images-2 {
+  &:before {
+    content: $icon-codefresh-images-2;
+  }
+}
+.icon-codefresh-launch-2 {
+  &:before {
+    content: $icon-codefresh-launch-2;
   }
 }
 .icon-codefresh-lenght {
@@ -246,6 +186,11 @@
     content: $icon-codefresh-log;
   }
 }
+.icon-codefresh-logs-2 {
+  &:before {
+    content: $icon-codefresh-logs-2;
+  }
+}
 .icon-codefresh-ok {
   &:before {
     content: $icon-codefresh-ok;
@@ -254,6 +199,21 @@
 .icon-codefresh-pause {
   &:before {
     content: $icon-codefresh-pause;
+  }
+}
+.icon-codefresh-pending {
+  &:before {
+    content: $icon-codefresh-pending;
+  }
+}
+.icon-codefresh-pipeline-2 {
+  &:before {
+    content: $icon-codefresh-pipeline-2;
+  }
+}
+.icon-codefresh-plus-2 {
+  &:before {
+    content: $icon-codefresh-plus-2;
   }
 }
 .icon-codefresh-projects {
@@ -266,6 +226,11 @@
     content: $icon-codefresh-promote;
   }
 }
+.icon-codefresh-promote-2 {
+  &:before {
+    content: $icon-codefresh-promote-2;
+  }
+}
 .icon-codefresh-pull-request {
   &:before {
     content: $icon-codefresh-pull-request;
@@ -274,6 +239,11 @@
 .icon-codefresh-queue {
   &:before {
     content: $icon-codefresh-queue;
+  }
+}
+.icon-codefresh-rebuild {
+  &:before {
+    content: $icon-codefresh-rebuild;
   }
 }
 .icon-codefresh-refresh {
@@ -291,14 +261,34 @@
     content: $icon-codefresh-running;
   }
 }
+.icon-codefresh-scan {
+  &:before {
+    content: $icon-codefresh-scan;
+  }
+}
 .icon-codefresh-search {
   &:before {
     content: $icon-codefresh-search;
   }
 }
+.icon-codefresh-search-2 {
+  &:before {
+    content: $icon-codefresh-search-2;
+  }
+}
+.icon-codefresh-send-email {
+  &:before {
+    content: $icon-codefresh-send-email;
+  }
+}
 .icon-codefresh-service {
   &:before {
     content: $icon-codefresh-service;
+  }
+}
+.icon-codefresh-services-2 {
+  &:before {
+    content: $icon-codefresh-services-2;
   }
 }
 .icon-codefresh-settings {
@@ -316,9 +306,19 @@
     content: $icon-codefresh-start;
   }
 }
+.icon-codefresh-success-2 {
+  &:before {
+    content: $icon-codefresh-success-2;
+  }
+}
 .icon-codefresh-table {
   &:before {
     content: $icon-codefresh-table;
+  }
+}
+.icon-codefresh-tag {
+  &:before {
+    content: $icon-codefresh-tag;
   }
 }
 .icon-codefresh-terminate {
